# BinarySerializator

./: CMakeLists.txt  README.md
include/: core.h  details.h  helpers.h  new_core.h  serializator.h  supportedTypes.h
src/: core.cpp  main.cpp  serializator.cpp
